Stash Verse 2.4.1